Resolve HTML code issues

--- a/interfaces/Config/templates/config_folders.tmpl
+++ b/interfaces/Config/templates/config_folders.tmpl
@@ -35,7 +35,7 @@
                 <div class="field-pair">
                     <label class="config" for="complete_dir">$T('opt-complete_dir')</label>
                     <input type="text" name="complete_dir" id="complete_dir" value="$complete_dir" data-initialdir="$my_home" />
-                    <a class="btn btn-default fileBrowser" type="button" href="${root}config/sorting/"><span class="glyphicon glyphicon-sort-by-alphabet"></span> $T('cmenu-sorting')</a>
+                    <a class="btn btn-default" href="${root}config/sorting/"><span class="glyphicon glyphicon-sort-by-alphabet"></span> $T('cmenu-sorting')</a>
                     <span class="desc">$T('explain-complete_dir') <br/> $T('explain-complete_dir-sorting')</span>
                 </div>
                 <div class="field-pair advanced-settings">
