--- a/interfaces/Config/templates/config_sorting.tmpl
+++ b/interfaces/Config/templates/config_sorting.tmpl
@@ -48,11 +48,11 @@
                 <!--#if $cur != 0#-->
                 <div class="col1">
                     <fieldset>
-                        <div class="field-pair">
+                        <div class="field-pair showSorter">
                             <label class="config" for="field_sort_string_display_$cur">$T('sortString')</label>
                             <input type="text" name="sort_string_display" id="field_sort_string_display_$cur" value="$slot.sort_string" disabled />
                         </div>
-                        <div class="field-pair">
+                        <div class="field-pair showSorter">
                             <label class="config" for="sort_cats_display_$cur">$T('affectedCat')</label>
                             <select name="sort_cats_display" multiple="multiple" class="multiple_cats" id="sort_cats_display_$cur" size="$len($categories)" disabled>
                                 <!--#for $cat in $categories#-->
@@ -447,12 +447,13 @@
         });
 
         \$('.showSorter').click(function () {
-            \$(this).parent().next().toggle();
-            \$(this).parent().next().next().toggle();
-            if (\$(this).text().indexOf("$T('showDetails')") > 0) {
-                \$(this).html(\$(this).html().replace("$T('showDetails')", "$T('hideDetails')"));
+            var theParent = \$(this).closest("form")
+            var theSwitch = theParent.find("button.showSorter")
+            theParent.find(".col1").toggle();
+            if (theSwitch.text().indexOf("$T('showDetails')") > 0) {
+                theSwitch.html(theSwitch.html().replace("$T('showDetails')", "$T('hideDetails')"));
             } else {
-                \$(this).html(\$(this).html().replace("$T('hideDetails')", "$T('showDetails')"));
+                theSwitch.html(theSwitch.html().replace("$T('hideDetails')", "$T('showDetails')"));
             }
             // Add coloring
             addRowColor()
