Add Keyboard shortcut hint in the Status window
Closes sabnzbd/sabnzbd.github.io/issues/235

--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -454,6 +454,8 @@
                             <div class="form-group form-checkbox">
                                 <label class="col-sm-6 control-label">
                                     $T("Glitter-keyboardShortcuts")
+                                    <span class="glyphicon glyphicon-question-sign" data-tooltip="true" data-placement="top" data-html="true"
+                                        data-original-title="P: $T('link-pause')<br>A: $T('Glitter-addNZB')<br>S: $T('Glitter-statusInterfaceOptions')<br>C: $T('menu-config')<br>$T('Glitter-keyboardShortcuts-arrows')"></span>
                                 </label>
                                 <div class="col-sm-4">
                                     <input type="checkbox" name="keyboardShortcuts" value="true" data-bind="checked: keyboardShortcuts" />
