Make Config link to wiki dynamic

--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -181,7 +181,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="$helpuri$help_uri" target="_blank">
+                    <a href="$help_uri" target="_blank">
                         <span class="glyphicon glyphicon-question-sign"></span>
                         <strong>$T('menu-help')</strong>
                     </a>
