--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -1,5 +1,5 @@
 <!--#set global $pane="Config"#-->
-<!--#set global $help_uri="configuration/4.0/configure"#-->
+<!--#set global $help_uri = $confighelpuri + "configure"#-->
 <!--#include $webdir + "/_inc_header_uc.tmpl"#-->
 
 <!--#from sabnzbd.encoding import CODEPAGE#-->
@@ -49,7 +49,7 @@
                         <span class="glyphicon glyphicon-ok"></span>
                         <!--#else#-->
                         <span class="label label-warning">$T('notAvailable')</span> $T('explain-getpar2mt')
-                        <a href="${helpuri}installation/multicore-par2" target="_blank">${helpuri}installation/multicore-par2</a>
+                        <a href="https://sabnzbd.org/wiki/installation/multicore-par2" target="_blank">https://sabnzbd.org/wiki/installation/multicore-par2</a>
                         <!--#end if#-->
                     </td>
                 </tr>
@@ -59,7 +59,7 @@
                     <th scope="row">SABCTools:</th>
                     <td>
                         <span class="label label-danger">$T('notAvailable')</span>
-                        <a href="$helpuri$help_uri#no_sabctools" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
+                        <a href="$help_uri#no_sabctools" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
                     </td>
                 </tr>
                 <!--#end if#-->
@@ -68,7 +68,7 @@
                     <th scope="row">$T('opt-enable_unzip'):</th>
                     <td>
                         <span class="label label-warning">$T('notAvailable')</span>
-                        <a href="${helpuri}installation/install-off-modules#toc8" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
+                        <a href="https://sabnzbd.org/wiki/installation/install-off-modules#toc8" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
                     </td>
                 </tr>
                 <!--#end if#-->
@@ -77,7 +77,7 @@
                     <th scope="row">$T('opt-enable_7zip'):</th>
                     <td>
                         <span class="label label-warning">$T('notAvailable')</span>
-                        <a href="${helpuri}installation/install-off-modules#toc8" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
+                        <a href="https://sabnzbd.org/wiki/installation/install-off-modules#toc8" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
                     </td>
                 </tr>
                 <!--#end if#-->
