--- a/interfaces/Config/templates/config_scheduling.tmpl
+++ b/interfaces/Config/templates/config_scheduling.tmpl
@@ -1,5 +1,5 @@
 <!--#set global $pane="Scheduling"#-->
-<!--#set global $help_uri="configuration/4.0/scheduling"#-->
+<!--#set global $help_uri = $confighelpuri + "scheduling"#-->
 <!--#include $webdir + "/_inc_header_uc.tmpl"#-->
 
 <%
@@ -15,7 +15,7 @@ else:
 <div class="colmask">
     <div class="section">
         <div class="col2">
-            <h3>$T('addSchedule') <a href="$helpuri$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
+            <h3>$T('addSchedule') <a href="$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
         </div><!-- /col2 -->
         <form action="addSchedule" method="post" autocomplete="off">
         <input type="hidden" id="apikey" name="apikey" value="$apikey" />
