--- a/interfaces/Config/templates/config_sorting.tmpl
+++ b/interfaces/Config/templates/config_sorting.tmpl
@@ -1,9 +1,9 @@
 <!--#set global $pane="Sorting"#-->
-<!--#set global $help_uri="configuration/4.0/sorting"#-->
+<!--#set global $help_uri = $confighelpuri + "sorting"#-->
 <!--#include $webdir + "/_inc_header_uc.tmpl"#-->
 
 <div class="padTable section explain-sorting">
-    <a class="main-helplink" href="$helpuri$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
+    <a class="main-helplink" href="$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
     $T('explain-sorting')
 </div>
 <div class="colmask">
@@ -33,9 +33,9 @@
                 </div>
                 <div class="col2">
                     <!--#if $cur == 0#-->
-                    <h3>$T('add-sorter') <a href="$helpuri$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
+                    <h3>$T('add-sorter') <a href="$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
                     <!--#else#-->
-                    <h3>$slot.name <a href="$helpuri$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
+                    <h3>$slot.name <a href="$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
                     <div class="sorter-switch-container wide">
                         <input type="checkbox" class="toggleSorterCheckbox sorter-switch float-left" rel="$slot.name" name="is_active" id="is_active_$cur" value="$slot.is_active" <!--#if $slot.is_active != 0 then 'checked="checked"' else ""#--> />
                         <label class="sorter-switch float-left" for="is_active_$cur">$T('enabled')</label>
