Disable sorting on pattern key so you can select text on it / prevent it from moving.

--- a/interfaces/Config/templates/config_sorting.tmpl
+++ b/interfaces/Config/templates/config_sorting.tmpl
@@ -472,6 +472,7 @@
                 ui.placeholder.height(hPlaceholder + hExtra);
                 \$('<div class="sorter-placeholder-anim" data-height="' + hPlaceholder + '"></div>').insertAfter(ui.placeholder);
             },
+            cancel: ".pattern-table",
             change: function(event, ui) {
                 ui.placeholder.stop().height(0).animate({
                     height: ui.item.outerHeight() + hExtra
