Warn users against using application directory as their Scripts Folder
Closes #2557

--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -25,7 +25,7 @@
                 </tr>
                 <tr>
                     <th scope="row">$T('pythonVersion'): </th>
-                    <td>$sys.version[:120] [$CODEPAGE]</td>
+                    <td>$sys.version [$CODEPAGE]</td>
                 </tr>
                 <tr>
                     <th scope="row">OpenSSL:</th>
